[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/runescape_uf.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://IntroNegre.gd" type="Script" id=2]
[ext_resource path="res://BGGameMusic.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/keyboard-click-327728.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="IntroNegre" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Bg" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0, 0, 0, 1 )

[node name="Text" type="Label" parent="."]
margin_left = 7.0
margin_top = 18.0
margin_right = 313.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 237.0
margin_top = 153.0
margin_right = 310.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 2 )
action_mode = 0
text = "Continuar"
flat = true

[node name="AudioStreamPlayer" parent="." instance=ExtResource( 3 )]
autoplay = true

[node name="TypeSfx1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0

[node name="TypeSfx2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0

[node name="TypeSfx3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0
